src/objects/Coffee_Farmer__c.object
<CustomObject>
    <fields>
        <fullName>Acres_of_coffee_managed__c</fullName>
        <inlineHelpText>Please tell me, how many acres of coffee does your household operate/manage (including all coffee gardens or plots mentioned above)</inlineHelpText>
        <label>Acres of coffee managed</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 1 acre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 acres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10 acres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 11 acres</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Acres_of_coffee_planted_last_12_months__c</fullName>
        <inlineHelpText>How many acres of coffee have you planted in the last 12 months</inlineHelpText>
        <label>Acres of coffee planted last 12 months</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 1 acre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 acres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10 acres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 11 acres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_source_of_revenue_4_household__c</fullName>
        <description>In addition to your coffee income, what are the additional sources of revenue for your household?</description>
        <label>Additional source of revenue 4 household</label>
        <picklist>
            <picklistValues>
                <fullName>Other cash crops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Livestock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remittances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Agree_on_need_2_change_coffee_tree_cycle__c</fullName>
        <label>Agree on need 2 change coffee tree cycle</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount_on_herbicides_sufficient_12months__c</fullName>
        <label>Amount on herbicides sufficient 12months</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount_spent_on_chemicals_last_12months__c</fullName>
        <label>Amount spent on chemicals last 12months</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_spent_on_herbicides_last_12months__c</fullName>
        <label>Amount spent on herbicides last 12months</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Any_HH_member_go_day_night_without_food__c</fullName>
        <description>In the past [4 weeks/30 days] did you or any household member go a whole day and night without eating anything at all because there was not enough food?</description>
        <inlineHelpText>In the past [4 weeks/30 days] did you or any household member go a whole day and night without eating anything at all because there was not enough food?</inlineHelpText>
        <label>HH member go day&amp;night w/out food lst 4w</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Any_hhold_member_sleep_hungry_last_4week__c</fullName>
        <description>In the past 4 weeks did u or any household member spent a night hungry because of not enough food</description>
        <inlineHelpText>In the past [4 weeks/30 days] did you or any household member go to sleep at night hungry because there was not enough food</inlineHelpText>
        <label>Any hhold member sleep hungry last 4week</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Any_improved_plants_in_new_coffee__c</fullName>
        <inlineHelpText>Of the new coffee trees that you planted in the last 12months, were any improved</inlineHelpText>
        <label>Any improved plants in new coffee</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Average_Coffee_Price_sold_Sep_Dec_2013__c</fullName>
        <label>Average Coffee Price sold Sep Dec 2013</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Price_of_Coffee_sold_Feb_Aug_201__c</fullName>
        <label>Average Price Coffee sold Feb Aug 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_daily_meals_e_household_consumes__c</fullName>
        <description>average daily meals the household consumes</description>
        <inlineHelpText>On average how many meals does your household consume daily</inlineHelpText>
        <label>Average daily meals e household consumes</label>
        <picklist>
            <picklistValues>
                <fullName>One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At three meals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Aware_of_bad_effects_of_herbicides_usage__c</fullName>
        <label>Aware of bad effects of herbicides usage</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Benefits_from_coffee_coop_association__c</fullName>
        <label>Benefits from coffee coop/association</label>
        <picklist>
            <picklistValues>
                <fullName>To obtain training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To obtain information on coffee farming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To obtain certification for coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better access to inputs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better access to credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obtain a better price for coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Benefits_of_coffee_certification_scheme__c</fullName>
        <label>Benefits of coffee certification scheme</label>
        <picklist>
            <picklistValues>
                <fullName>Improved agricultural practices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better/higher prices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group marketing of coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>price is above average production cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improved access to credit (loans)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rainforest Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAFÉ practices</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Can_detect_particular_pest_o_disease__c</fullName>
        <label>Can detect particular pest o disease</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Challenges_of_the_coffee_certification__c</fullName>
        <label>Challenges of the coffee certification</label>
        <picklist>
            <picklistValues>
                <fullName>Strict certification requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>It is very expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lower quality coffee (for 4. consumers)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Coffee_gardens_managed_directly__c</fullName>
        <inlineHelpText>How many coffee gardens or plots does your house hold manage directly</inlineHelpText>
        <label>Coffee gardens managed directly</label>
        <picklist>
            <picklistValues>
                <fullName>One garden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-3 gardens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3 gardens</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Coffee_seedlings_purchase_last_12_months__c</fullName>
        <inlineHelpText>In the last 12 months have you purchased any coffee seedlings</inlineHelpText>
        <label>Coffee seedlings purchase last 12 months</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Coffee_storage_observations__c</fullName>
        <label>Coffee storage observations</label>
        <picklist>
            <picklistValues>
                <fullName>Pack coffee in clean sacks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stack coffee bags on raised platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store coffee away from farm produce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store parchment and Kiboko separately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store coffee away from Agro-chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Combination_o_seasonal_weed_control_used__c</fullName>
        <label>Combination o seasonal weed control used</label>
        <picklist>
            <picklistValues>
                <fullName>Slash during the dry season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slash during the rainy season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use herbicides during the rainy season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use herbicides during the dry season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use hand hoe during the dry season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use hand hoe during the rainy season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Common_means_2_get_fertilizer_herbicides__c</fullName>
        <inlineHelpText>What is the commonest means of acquisition of fertilizers, herbicides or pesticides that you use on your coffee garden (s)</inlineHelpText>
        <label>Common means 2 get fertilizer herbicides</label>
        <picklist>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Given for free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Get on credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Common_practices_on_coffee__c</fullName>
        <label>Common practices on coffee</label>
        <picklist>
            <picklistValues>
                <fullName>Drying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sorting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name and Price tagging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traceability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Commonly_used_method_when_applying__c</fullName>
        <inlineHelpText>Which of the following is the most commonly used method when applying fertilizers or manure on your coffee</inlineHelpText>
        <label>Commonly used method when applying</label>
        <picklist>
            <picklistValues>
                <fullName>Ring banding (Placed around the tree)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spot application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broad casting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placed in trenches</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Crops_planted_alongside_new_coffee__c</fullName>
        <inlineHelpText>In the last 12months, what crops have you planted alongside the new coffee trees</inlineHelpText>
        <label>Crops planted alongside new coffee</label>
        <picklist>
            <picklistValues>
                <fullName>Banana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground nuts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cowpeas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soya bean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vegetables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Do_u_thnk_u_hv_enough_info_on_the_scheme__c</fullName>
        <description>From your own opinion, do you think you have enough information on the coffee certification scheme you use</description>
        <inlineHelpText>From your own opinion, do you think you have enough information on the coffee certification scheme you use (selected above)</inlineHelpText>
        <label>Do u thnk u hv enough info on the scheme</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_Coffee_pests_and_disease_control__c</fullName>
        <label>Does Coffee pests and disease control</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_Coffee_processing__c</fullName>
        <label>Does Coffee processing</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_desuckering_pruning_and_stumping__c</fullName>
        <inlineHelpText>Coffee desuckering, pruning and stumping</inlineHelpText>
        <label>Does desuckering pruning and stumping</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_group_production_and_marketing__c</fullName>
        <label>Does group production and marketing</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_on_farm_coffee_value_addition__c</fullName>
        <inlineHelpText>On farm coffee value addition (Coffee post harvest handling and processing)</inlineHelpText>
        <label>Does on farm coffee value addition</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_proper_and_timely_weed_control__c</fullName>
        <label>Does proper and timely weed control</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_proper_coffee_farm_record_keeping__c</fullName>
        <description>Proper Coffee farm record keeping</description>
        <label>Does proper coffee farm record keeping</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_soil_and_water_conservation__c</fullName>
        <inlineHelpText>Soil and water conservation</inlineHelpText>
        <label>Does soil and water conservation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_soil_fertility_management__c</fullName>
        <inlineHelpText>Soil fertility management (application of fertilizer or manure)</inlineHelpText>
        <label>Does soil fertility management</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_yo_household_hav_enough_food_to_eat__c</fullName>
        <description>Does your household have enough food to eat</description>
        <label>Does yo household hav enough food to eat</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Easily_access_agro_inputs__c</fullName>
        <inlineHelpText>Easily access agro-inputs (fertilizer or manure, pesticides, herbicides and planting materials)</inlineHelpText>
        <label>Easily access agro inputs</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ever_pruned_coffee_under_2_yrs_4_growth__c</fullName>
        <inlineHelpText>Have you ever pruned your coffee trees under 2 years old so that they grow under a particular manner</inlineHelpText>
        <label>Ever pruned coffee under 2 yrs 4 growth</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable (No trees under 2 years)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Factors_Considered_Establishing_Nursery__c</fullName>
        <description>Factors considered when establishing a coffee nursery</description>
        <inlineHelpText>Factors considered when establishing a coffee nursery</inlineHelpText>
        <label>Factors Considered Establishing Nursery</label>
        <picklist>
            <picklistValues>
                <fullName>Type of coffee seed on demand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Availability of  potting materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soil fertility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Altitude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fertilizer or manure availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Fertilizer_applied_per_tree__c</fullName>
        <label>Fertilizer applied per tree</label>
        <picklist>
            <picklistValues>
                <fullName>50 grams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 grams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150 grams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>185 grams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250 grams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300 grams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fertilizer_used_in_coffee_plantations__c</fullName>
        <label>Fertilizer used in coffee plantations</label>
        <picklist>
            <picklistValues>
                <fullName>CAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NPK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Focus_Farmer__c</fullName>
        <label>Focus Farmer</label>
        <referenceTo>Focus_Farmer__c</referenceTo>
        <relationshipLabel>Coffee Farmers</relationshipLabel>
        <relationshipName>Coffee_Farmers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Follow_plan_or_program_when_applying__c</fullName>
        <inlineHelpText>Do you follow a particular program or plan such as time, type and amount of fertilizer to apply on your coffee</inlineHelpText>
        <label>Follow plan or program when applying</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GPS_Latitude__c</fullName>
        <formula>Submission__r.gfsurveys__gps_x__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GPS Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GPS_Longitude__c</fullName>
        <formula>Submission__r.gfsurveys__gps_y__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GPS Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HH_has_food_reserves__c</fullName>
        <description>Does your household have food reserves in from of stored food</description>
        <label>HH has food reserves</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HH_sometimes_has_surplus_maize_for_mkt__c</fullName>
        <description>Does your household sometimes has surplus maize for market</description>
        <inlineHelpText>Does your household sometimes has surplus maize for market</inlineHelpText>
        <label>HH sometimes has surplus maize for sale</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rarely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sometimes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All the time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_Often_Weeds_Pest_and_Disease_Control__c</fullName>
        <description>How often do you control weeds, pests and diseases?</description>
        <inlineHelpText>How often do you control weeds, pests and diseases?</inlineHelpText>
        <label>How Often Weeds Pest and Disease Control</label>
        <picklist>
            <picklistValues>
                <fullName>Every week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Once a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice a season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>When  I see any weeds or pest or disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_Potting_Media_is_Mixed__c</fullName>
        <description>How do you mix the potting media or soil to be used for potting the coffee seedlings</description>
        <inlineHelpText>How do you mix the potting media or soil to be used for potting the coffee seedlings</inlineHelpText>
        <label>How Potting Media is Mixed</label>
        <picklist>
            <picklistValues>
                <fullName>Mix soil with dry manure in ratio of 3 to 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mix soil with manure  in a ratio of 2 to 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mix  soil and manure in a ratio of 1 to 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_do_you_manage_weeds_in_your_coffee__c</fullName>
        <label>How do you manage weeds in your coffee</label>
        <picklist>
            <picklistValues>
                <fullName>By hand hoeing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use herbicides</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slashing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mulching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animals feeding on the weeds (grazing animals in the coffee garden)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A combination of methods above</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_do_you_sort_your_coffee__c</fullName>
        <label>How do you sort your coffee</label>
        <picklist>
            <picklistValues>
                <fullName>Remove broken black beans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove stones/dirt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove waste or rubish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not sort</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>